Terminado as rotas de usuario e veiculo
