# vehiclesRent-api/src/controllers/vehicles.controller.ts
@@ -22,26 +22,71 @@ export const createVehicle = async(req: Request,res: Response)=>{
 
 export const rentVehicle = async (req: Request, res: Response)=>{
     try {
-        const {plate, id_user, init_date, finishe_date} = req.body
+        const {plate, email, init_date, finishe_date} = req.body
 
         const user = await User.findOneBy({
-            id:id_user
+            email:email
         })
+        console.log(user)
         if(!user) return res.status(404).json({
             message: 'User does exists'
+        })
+        if(user.vehicle!=-1) return res.status(405).json({
+            message: 'User already has a rented vehicle'
         })
 
         const vehicle = await Vehicle.findOneBy({
             plate: plate
         })
-        if(!vehicle) return res.status(404).json({
+        if(!vehicle) return res.status(406).json({
             message: 'Vehicle does exists'
         })
-        vehicle.id_user = id_user
+        if(vehicle.rent) return res.status(407).json({
+            message: 'Car is rented'
+        })
+        vehicle.id_user = user.id
+        vehicle.rent = true
         vehicle.init_date = init_date
         vehicle.finishe_date = finishe_date
+        user.vehicle = vehicle.id
         await vehicle.save()
-        return res.sendStatus(204)
+        await user.save()
+        return res.json(user)
+    } catch (error) {
+        if(error instanceof Error){
+            res.status(500).json({
+                message: error.message
+            })
+        }
+    }
+}
+
+export const returnVehicle = async (req: Request, res: Response)=>{
+    try {
+        const {plate, email} = req.body
+
+        const user = await User.findOneBy({
+            email:email
+        })
+        if(!user) return res.status(404).json({
+            message: 'User does exists'
+        })
+        if(user.vehicle==-1) return res.status(405).json({
+            message: 'User does not have a rental vehicle'
+        })
+
+        const vehicle = await Vehicle.findOneBy({
+            id_user: user.id
+        })
+        if(!vehicle) return res.status(406).json({
+            message: 'Vehicle does exists'
+        })
+        vehicle.rent = false
+        vehicle.id_user = -1
+        user.vehicle = -1
+        await vehicle.save()
+        await user.save()
+        return res.json(user)
     } catch (error) {
         if(error instanceof Error){
             res.status(500).json({
@@ -55,6 +100,46 @@ export const getVehicles = async(req: Request, res: Response)=>{
     try {
         const vehicles = await Vehicle.find()
         res.json(vehicles)
+    } catch (error) {
+        if(error instanceof Error){
+            return res.status(500).json({
+                message:error.message
+            })
+        }
+    }
+}
+
+export const getVehicle= async(req: Request, res: Response)=>{
+    try {
+        const { plate } = req.body
+        const user = await Vehicle.findOneBy({
+            plate: plate
+        })
+        if(!user) return res.status(404).json({
+            message: 'Vehicle does exists'
+        })
+        res.json(user)
+    } catch (error) {
+        if(error instanceof Error){
+            return res.status(500).json({
+                message:error.message
+            })
+        }
+    }
+}
+
+export const deleteVehicle = async (req: Request, res: Response)=>{
+    try {
+        const {plate} = req.body
+        const result = await Vehicle.delete({plate: plate})
+        if(result.affected === 0 ){
+            res.status(404).json({
+                message: 'Vehicle not found'
+            })
+        }
+        return res.status(204).json({
+            message: 'Vehicle removed'
+        })
     } catch (error) {
         if(error instanceof Error){
             return res.status(500).json({
