# vehiclesRent-api/src/routes/vehicle.routes.ts
@@ -1,5 +1,5 @@
 import { Router } from "express"
-import { createVehicle, getVehicles } from '../controllers/vehicles.controller'
+import { createVehicle, getVehicle, getVehicles, deleteVehicle, rentVehicle, returnVehicle } from '../controllers/vehicles.controller'
 import { ensureAuth } from "../middleware"
 
 const router = Router()
@@ -8,8 +8,12 @@ router.post('/vehicles', ensureAuth,createVehicle)
 
 router.get('/vehicles', ensureAuth, getVehicles)
 
-router.put('/vehicles', ensureAuth)
+router.post('/users/get_vehicle', ensureAuth, getVehicle)
 
-router.delete('/vehicles', ensureAuth)
+router.post('/vehicles/rent_vehicle', ensureAuth, rentVehicle)
+
+router.post('/vehicles/return_vehicle', ensureAuth, returnVehicle)
+
+router.delete('/vehicles', ensureAuth, deleteVehicle)
 
 export default router
